# agentic-research-assistant

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  skills-lock.json
src/: main.py  ollama_client.py  prompts.py  settings.py  state.py
src/agents/: __init__.py  researcher.py
src/nodes/: __init__.py  evaluator.py  researcher.py  search_limit_answer.py
src/tools/: __init__.py  web_search.py
tests/: test_config.py  test_connection.py  test_graph.py  test_prompts.py  test_state.py  test_tools.py
